--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,16 +14,25 @@ authors = [
 
 dependencies = [
  "numpy >= 1.16",
+ #tsplib95  # doesn't support GTSP yet
 ]
 
-
+[project.optional-dependencies]
+dev = [
+  "matplotlib",
+  "jupyter",
+  "ipykernel",
+  "ipython", # this one may require separate conda/mamba install
+  "ipympl", # this one for matplotlib ipympl
+  "pytest",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
-only-include = ["src/mga"]
+only-include = ["src/gasuite"]
 
 [tool.hatch.build.targets.wheels]
-only-include = ["src/mga"]
+only-include = ["src/gasuite"]
